--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+## Burning Airline Exercise
 
-Things you may want to cover:
+Given 2 days and no prior team work (in web development) experience, we had to come up with a solution to this: https://gist.github.com/ga-wolf/14d2f7ba1311e088c7ea8c996aa3f598
 
-* Ruby version
+# libraries, gems and platforms used:
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- Ruby on Rails
+- Materialize-sass
+- Skeleton
+- Backbone
